criando lista-produtos

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,19 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item *ngFor="let cliente of listaClientes">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-label>
+      {{cliente.id}}
+    </ion-label>
+
+    <ion-label>
+      <h1>{{cliente.nome}}</h1>
+    </ion-label>
+
+    <ion-label>
+     <a href="mailto:{{cliente.email}}"> {{cliente.email}}</a>
+    </ion-label>
+
+  </ion-item>
 </ion-content>
