--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,4 +22,8 @@
     </ion-label>
 
   </ion-item>
+
+  <ion-button routerLink="/create-cliente">
+    Adicionar Cliente
+  </ion-button>
 </ion-content>
